# akaze

./: CMakeLists.txt  README.md
python/: CMakeLists.txt  python_bindings.cpp  test.py
src/: CMakeLists.txt  akaze_compare.cpp  akaze_features.cpp  akaze_match.cpp
src/lib/: AKAZE.cpp  AKAZE.h  AKAZEConfig.h  cudaImage.cu  cuda_akaze.cu  cuda_akaze.h
